--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </p>
           <div class="btn-con">
             <a
-              href="https://drive.google.com/file/d/17lJDxA1rD9artET1P-l2Bf-nW6FZ2bGL/view?usp=share_link"
+              href="https://drive.google.com/file/d/1kzbI5miCDAhI3a2kzBswhlE9swS4m9uS/view?usp=sharing"
               target="_blank"
               class="main-btn"
             >
@@ -86,7 +86,7 @@
             </p>
             <div class="btn-con">
               <a
-                href="https://drive.google.com/file/d/17lJDxA1rD9artET1P-l2Bf-nW6FZ2bGL/view?usp=share_link"
+                href="https://drive.google.com/file/d/1kzbI5miCDAhI3a2kzBswhlE9swS4m9uS/view?usp=sharing"
                 target="_blank"
                 class="main-btn"
               >
